fixed IMAGES double tapping to zoom bug on mobile

--- a/style.css
+++ b/style.css
@@ -149,6 +149,10 @@ h2 {
     display: block;
     max-width: 100%;
     max-height: 100%;
+    touch-action: manipulation;
+    -webkit-user-drag: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
 }
 .keyboard-container .keyboard-row .char:hover, .button:hover {
     cursor: pointer;
